--- a/.github/workflows/server_compatibility.yaml
+++ b/.github/workflows/server_compatibility.yaml
@@ -53,6 +53,12 @@ jobs:
           repository: hazelcast/hazelcast-nodejs-client
           path: tag
           ref: ${{ github.event.inputs.client_tag }}
+      - name: Checkout to tests branch
+        uses: actions/checkout@v2
+        with:
+          repository: srknzl/test
+          path: tests
+          ref: tests
       - name: Install dependencies and compile client
         run: |
           npm install
@@ -68,6 +74,10 @@ jobs:
           rm $GITHUB_WORKSPACE/master/package.json
           cp -a $GITHUB_WORKSPACE/tag/lib $GITHUB_WORKSPACE/master/lib
           cp -a $GITHUB_WORKSPACE/tag/package.json $GITHUB_WORKSPACE/master/package.json
+      - name: Copy tests from tests branch
+        run: |
+          rm -rf $GITHUB_WORKSPACE/master/tests/integration/backward_compatible
+          cp -a $GITHUB_WORKSPACE/tests/backward_compatible $GITHUB_WORKSPACE/master/tests/integration
       - name: Start RC
         env:
           HAZELCAST_ENTERPRISE_KEY: ${{ secrets.HAZELCAST_ENTERPRISE_KEY }}
