--- a/.github/workflows/server_compatibility.yaml
+++ b/.github/workflows/server_compatibility.yaml
@@ -153,6 +153,10 @@ jobs:
           repository: srknzl/test
           path: tests
           ref: tests
+      - name: Change InvocationService
+        run: |
+          rm -rf $GITHUB_WORKSPACE/master/src/invocation/InvocationService.ts
+          cp -a $GITHUB_WORKSPACE/tests/InvocationService $GITHUB_WORKSPACE/master/src/invocation
       - name: Install dependencies and compile client
         run: |
           npm install
