--- a/.github/workflows/a.yaml
+++ b/.github/workflows/a.yaml
@@ -4,8 +4,8 @@ on:
   workflow_dispatch:
 jobs:
   test:
-    name: Create and upload JARs
-    runs-on:
+    runs-on: ${{ matrix.os }}
+    name: Test
     strategy:
       matrix:
         python-version: [ 3.4 ]
