--- a/.github/workflows/a.yaml
+++ b/.github/workflows/a.yaml
@@ -17,5 +17,6 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install
         run: |
+           pip install --upgrade setuptools
            pip install psutil
             
