--- a/.github/workflows/server_compatibility.yaml
+++ b/.github/workflows/server_compatibility.yaml
@@ -3,22 +3,14 @@ name: Test Nodejs Client with server
 on:
   workflow_dispatch:
     inputs:
-      client_tag:
-        description: Client of the tag to test, starts with v
+      client_ref:
+        description: Ref of the client to test
         required: true
         default: v4.0.0
-      build_jar:
-        description: Whether to build jars (yes/no)
-        required: true
-        default: no
-      server_branch:
+      branch_name:
         description: Server branch to build from (provide if build_jar is yes)
         required: false
         default: master
-      server_version:
-        description: Server version to download (provide if build_jar is no)
-        required: false
-        default: 4.1.4
       server_kind:
         description: Server kind, os or enterprise
         required: true
@@ -33,35 +25,29 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup Java
-        if:  ${{ github.event.inputs.build_jar == 'yes' }}
         uses: actions/setup-java@v1
         with:
           java-version: 8
       - name: Checkout to Hazelcast
-        if:  ${{ github.event.inputs.build_jar == 'yes' }}
         uses: actions/checkout@v2
         with:
           repository: hazelcast/hazelcast
           path: hazelcast
-          ref: ${{ github.event.inputs.server_branch }}
+          ref: ${{ github.event.inputs.branch_name }}
       - name: Checkout to Hazelcast Enterprise
-        if:  ${{ github.event.inputs.build_jar == 'yes' }}
         uses: actions/checkout@v2
         with:
           repository: hazelcast/hazelcast-enterprise
           path: hazelcast-enterprise
-          ref: ${{ github.event.inputs.server_branch }}
+          ref: ${{ github.event.inputs.branch_name }}
           token: ${{ secrets.GH_PAT }}
       - name: Build JARs
-        if:  ${{ github.event.inputs.build_jar == 'yes' }}
         run: mvn clean install -DskipTests=True
         working-directory: hazelcast
       - name: Build Enterprise JARs
-        if:  ${{ github.event.inputs.build_jar == 'yes' }}
         run: mvn clean install -DskipTests=True
         working-directory: hazelcast-enterprise
       - name: Upload Hazelcast JAR
-        if:  ${{ github.event.inputs.build_jar == 'yes' }}
         uses: actions/upload-artifact@v2
         with:
           name: hazelcast
@@ -75,21 +61,18 @@ jobs:
           if-no-files-found: ignore
           retention-days: 1
       - name: Upload Hazelcast tests JAR
-        if:  ${{ github.event.inputs.build_jar == 'yes' }}
         uses: actions/upload-artifact@v2
         with:
           name: hazelcast-tests
           path: hazelcast/hazelcast/target/hazelcast-*-tests.jar
           retention-days: 1
       - name: Upload Hazelcast Enterprise JAR
-        if:  ${{ github.event.inputs.build_jar == 'yes' }}
         uses: actions/upload-artifact@v2
         with:
           name: hazelcast-enterprise
           path: hazelcast-enterprise/hazelcast-enterprise/target/hazelcast-enterprise-*[!s].jar
           retention-days: 1
       - name: Upload Hazelcast Enterprise tests JAR
-        if:  ${{ github.event.inputs.build_jar == 'yes' }}
         uses: actions/upload-artifact@v2
         with:
           name: hazelcast-enterprise-tests
@@ -102,7 +85,7 @@ jobs:
       fail-fast: false
       matrix:
           os: [ ubuntu-latest, windows-latest ]
-    name: Test Node.js client ${{ github.event.inputs.client_tag }} with ${{ github.event.inputs.server_version }} ${{ github.event.inputs.server_kind }} server on ${{ matrix.os }}
+    name: Test Node.js client ${{ github.event.inputs.client_ref }} with server branch ${{ github.event.inputs.branch_name }} ${{ github.event.inputs.server_kind }} on ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python
@@ -117,29 +100,31 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 8
-      - name: Download released JARs
-        if:  ${{ github.event.inputs.build_jar == 'no' }}
-        run: python download_server_jars.py --version ${{ github.event.inputs.server_version }} --server-kind ${{ github.event.inputs.server_kind }} --dst jars
       - name: Download Hazelcast tests JAR
-        if:  ${{ github.event.inputs.build_jar == 'yes' }}
         uses: actions/download-artifact@v2
         with:
           name: hazelcast-tests
           path: jars
-      - name: Download built Hazelcast JAR
-        if: ${{ github.event.inputs.server_kind == 'os' && github.event.inputs.build_jar == 'yes' }} 
+      - name: Download Hazelcast SQL JAR (if exists)
+        continue-on-error: true
+        uses: actions/download-artifact@v2
+        with:
+          name: hazelcast-sql
+          path: jars
+      - name: Download Hazelcast JAR
+        if: ${{ matrix.server_kind == 'os' }}
         uses: actions/download-artifact@v2
         with:
           name: hazelcast
           path: jars
-      - name: Download built Hazelcast Enterprise JAR
-        if: ${{ github.event.inputs.server_kind == 'enterprise' && github.event.inputs.build_jar == 'yes' }} 
+      - name: Download Hazelcast Enterprise JAR
+        if: ${{ matrix.server_kind == 'enterprise' }}
         uses: actions/download-artifact@v2
         with:
           name: hazelcast-enterprise
           path: jars
-      - name: Download built Hazelcast Enterprise tests JAR
-        if: ${{ github.event.inputs.server_kind == 'enterprise' && github.event.inputs.build_jar == 'yes' }} 
+      - name: Download Hazelcast Enterprise tests JAR
+        if: ${{ matrix.server_kind == 'enterprise' }}
         uses: actions/download-artifact@v2
         with:
           name: hazelcast-enterprise-tests
@@ -155,7 +140,7 @@ jobs:
         with:
           repository: hazelcast/hazelcast-nodejs-client
           path: tag
-          ref: ${{ github.event.inputs.client_tag }}
+          ref: ${{ github.event.inputs.client_ref }}
       - name: Checkout to tests branch
         uses: actions/checkout@v2
         with:
